make small corrections

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -466,7 +466,7 @@
    "metadata": {},
    "source": [
     "# IPython Magic\n",
-    "If you are running yorr notebook with an python kernel, ther are some special built in funcitonality that you can access with \"magic\" functions. There are line magics that are preceded by a single `%` and affect only that line and cell magics preceded by `%%` that you place at the begining of a cell to modify the behavior of that cell. There are [lots of magics](http://ipython.readthedocs.io/en/stable/interactive/magics.htm), but here are some handy ones."
+    "If you are running your notebook with an python kernel, there are some special built in funcitonality that you can access with \"magic\" functions. There are line magics that are preceded by a single `%` and affect only that line and cell magics preceded by `%%` that you place at the beginning of a cell to modify the behavior of that cell. There are [lots of magics](http://ipython.readthedocs.io/en/stable/interactive/magics.htm), but here are some handy ones."
    ]
   },
   {
@@ -474,7 +474,7 @@
    "metadata": {},
    "source": [
     "## Environtment variables: %env\n",
-    "If you need to modify the environemnt variables that apply to a running notebook and don't want to restart your notebook server, `%env` allows you to check and set them from within the notebook"
+    "If you need to modify the environment variables that apply to a running notebook and don't want to restart your notebook server, `%env` allows you to check and set them from within the notebook"
    ]
   },
   {
@@ -666,7 +666,7 @@
    "metadata": {},
    "source": [
     "### Writing files: %%writefile\n",
-    "With `%%writefile` you can write the contents of a cell to a file. Let's create a simple python script that sets a python variable equal to the value of the environtment variable we just created."
+    "With `%%writefile` you can write the contents of a cell to a file. Let's create a simple python script that sets a python variable equal to the value of the environment variable we just created."
    ]
   },
   {
@@ -2434,9 +2434,8 @@
     "if os.path.exists(os.path.expanduser('~/.jupyter/jupyter_notebook_config.py')):\n",
     "    print(\"Good to go\")\n",
     "else:\n",
-    "    # not great to do because it's not going to work if you write this notebook out to a script\n",
     "    !jupyter notebook --generate-config\n",
-    "    # better to use subprocess\n",
+    "    # could also use the subprocess library\n",
     "    # check_output(\"jupyter notebook --generate-config\")"
    ]
   },
