add Julia installation instrucitons

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -1409,6 +1409,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T13:26:01.428720Z",
+     "start_time": "2017-09-04T13:25:56.245854Z"
+    }
+   },
+   "source": [
+    "## Julia\n",
+    "From [Julia's docs](https://docs.julialang.org/en/stable/manual/introduction/): \"The Julia programming language... is a flexible dynamic language, appropriate for scientific and numerical computing, with performance comparable to traditional statically-typed languages.\"\n",
+    "\n",
+    "To run julia in Jupyter note books, you'll first need to install julia. You can download the package for your machine from [here](https://julialang.org/downloads/). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T14:06:01.378309Z",
+     "start_time": "2017-09-04T14:06:01.357183Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENV[\"JUPYTER\"]=\"/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter\"\n",
+      "Pkg.add(\"IJulia\")\n",
+      "Pkg.build(\"IJulia\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This will print out what you need to put ininstall_ijulia.jl\n",
+    "jupyter_path = !which jupyter\n",
+    "print('ENV[\"JUPYTER\"]=\"%s\"'%jupyter_path[0])\n",
+    "print('Pkg.add(\"IJulia\")')\n",
+    "print('Pkg.build(\"IJulia\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T14:08:02.207166Z",
+     "start_time": "2017-09-04T14:08:02.202937Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting install_ijulia.jl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile install_ijulia.jl\n",
+    "ENV[\"JUPYTER\"]=\"/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter\"\n",
+    "Pkg.add(\"IJulia\")\n",
+    "Pkg.build(\"IJulia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T14:08:34.735859Z",
+     "start_time": "2017-09-04T14:08:06.061043Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Package IJulia is already installed\n",
+      "INFO: Building Conda\n",
+      "INFO: Building Homebrew\n",
+      "INFO: Building MbedTLS\n",
+      "INFO: Building ZMQ\n",
+      "WARNING: Compat.KERNEL is deprecated.\n",
+      "  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35\n",
+      "WARNING: Compat.KERNEL is deprecated.\n",
+      "  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35\n",
+      "in can_use at /Users/nielsond/.julia/v0.6/Homebrew/src/bindeps_integration.jl\n",
+      "WARNING: Compat.KERNEL is deprecated.\n",
+      "  likely near /Users/nielsond/.julia/v0.6/ZMQ/deps/build.jl:35\n",
+      "in package_available at /Users/nielsond/.julia/v0.6/Homebrew/src/bindeps_integration.jl\n",
+      "INFO: Building IJulia\n",
+      "INFO: Found Jupyter version 4.3.0: /Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter\n",
+      "INFO: Installing Julia kernelspec julia-0.6\n",
+      "[InstallKernelSpec] Removing existing kernelspec in /Users/nielsond/Library/Jupyter/kernels/julia-0.6\n",
+      "[InstallKernelSpec] Installed kernelspec julia-0.6 in /Users/nielsond/Library/Jupyter/kernels/julia-0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "!/Applications/Julia-0.6.app/Contents/Resources/julia/bin/julia ./install_ijulia.jl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now unfortunately you'll need to restart your jupyter server for it to find the new kernels. If you're following along on jupyter hub, you won't be able to do this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T14:09:56.873811Z",
+     "start_time": "2017-09-04T14:09:56.871382Z"
+    }
+   },
+   "source": [
+    "## R"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
@@ -1596,13 +1722,7 @@
       "r-highr-0.6-r3 100% |################################| Time: 0:00:00 356.11 kB/s\n",
       "r-hms-0.3-r3.4 100% |################################| Time: 0:00:00 343.01 kB/s\n",
       "r-iterators-1. 100% |################################| Time: 0:00:04  70.01 kB/s\n",
-      "r-jsonlite-1.5 100% |################################| Time: 0:00:12  81.79 kB/s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "r-jsonlite-1.5 100% |################################| Time: 0:00:12  81.79 kB/s\n",
       "r-kernsmooth-2 100% |################################| Time: 0:00:00 202.48 kB/s\n",
       "r-labeling-0.3 100% |################################| Time: 0:00:00 285.27 kB/s\n",
       "r-lattice-0.20 100% |################################| Time: 0:00:01 429.31 kB/s\n",
@@ -1725,7 +1845,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-01T12:49:46.458160Z",
      "start_time": "2017-09-01T12:49:46.088818Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
