Make load unrung

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -646,8 +646,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load boring.py\n",
-    "print(\"Not much going on here\")\n"
+    "%load boring.py\n"
    ]
   },
   {
@@ -1507,15 +1506,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1530,7 +1520,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-04T14:30:17.193856Z",
      "start_time": "2017-09-04T14:30:16.259935Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
