turn pdb back off

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -823,6 +823,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T16:04:12.226715Z",
+     "start_time": "2017-09-04T16:04:12.222371Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Automatic pdb calling has been turned OFF\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Turn autopdb back off\n",
+    "%pdb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
