--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -424,15 +424,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-09-04T14:18:05.863098Z",
-     "start_time": "2017-09-04T14:18:05.858391Z"
-    },
     "collapsed": true,
-    "solution": "hidden",
-    "solution_first": true
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": [
@@ -444,6 +440,25 @@
     "        ,\"Pooh\"\n",
     "        ,\"Fuzz\"\n",
     "        ,\"Tall\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T16:15:04.591495Z",
+     "start_time": "2017-09-04T16:15:04.588707Z"
+    },
+    "collapsed": true,
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "bears = [\"Yogi Bear\"\n",
+    "        ,\"Pooh Bear\"\n",
+    "        ,\"Fuzz Bear\"\n",
+    "        ,\"Tall Bear\"]"
    ]
   },
   {
@@ -641,8 +656,8 @@
      "start_time": "2017-09-04T14:18:09.194272Z"
     },
     "collapsed": true,
-    "solution": "hidden",
-    "solution_first": true
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": [
@@ -657,7 +672,8 @@
      "end_time": "2017-09-04T14:18:09.368212Z",
      "start_time": "2017-09-04T14:18:09.364288Z"
     },
-    "solution": "hidden"
+    "solution": "shown",
+    "solution2": "hidden"
    },
    "outputs": [
     {
@@ -1245,7 +1261,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-04T14:16:01.452526Z",
      "start_time": "2017-09-04T14:16:01.449657Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
