--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -4146,6 +4146,13 @@
    "toc_section_display": "block",
    "toc_window_display": false,
    "widenNotebook": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
