Writefile excercise for julia

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -1686,13 +1686,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use a writefile magic to write the output of the above cell to a file called install_ijulia.jl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-09-04T14:08:02.207166Z",
      "start_time": "2017-09-04T14:08:02.202937Z"
-    }
+    },
+    "solution2": "hidden"
    },
    "outputs": [
     {
