try to fix exercise extension

--- a/nhw_ipynb.ipynb
+++ b/nhw_ipynb.ipynb
@@ -469,6 +469,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Jupyter notebook extensions\n",
+    "Jupyter notebook extensions give notebooks various additional functionality, but they're not all garaunteed to be stable. You can find instructions for installing them here: https://github.com/ipython-contrib/jupyter_contrib_nbextensions\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# IPython Magic\n",
     "If you are running your notebook with an python kernel, there are some special built in funcitonality that you can access with \"magic\" functions. There are line magics that are preceded by a single `%` and affect only that line and cell magics preceded by `%%` that you place at the beginning of a cell to modify the behavior of that cell. There are [lots of magics](http://ipython.readthedocs.io/en/stable/interactive/magics.htm), but here are some handy ones."
    ]
@@ -4279,28 +4288,17 @@
    "version": "3.6.2"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
    "nav_menu": {
     "height": "297px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": false,
-   "widenNotebook": false
+   "toc_window_display": false
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
