--- a/nhw_ipynb_solution.ipynb
+++ b/nhw_ipynb_solution.ipynb
@@ -430,7 +430,9 @@
      "end_time": "2017-09-04T20:47:06.684790Z",
      "start_time": "2017-09-04T20:47:06.681250Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": [
@@ -442,6 +444,25 @@
     "        ,\"Pooh\"\n",
     "        ,\"Fuzz\"\n",
     "        ,\"Tall\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T20:24:17.217550Z",
+     "start_time": "2017-09-04T20:24:17.214600Z"
+    },
+    "collapsed": true,
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "bears = [\"Yogi Bear\"\n",
+    "        ,\"Pooh Bear\"\n",
+    "        ,\"Fuzz Bear\"\n",
+    "        ,\"Tall Bear\"]"
    ]
   },
   {
@@ -627,9 +648,36 @@
      "end_time": "2017-09-04T20:24:17.241323Z",
      "start_time": "2017-09-04T20:24:17.238150Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
+   "source": [
+    "# %load boring.py\n",
+    "print(\"Not much going on here\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T20:24:17.246581Z",
+     "start_time": "2017-09-04T20:24:17.242997Z"
+    },
+    "solution": "shown",
+    "solution2": "hidden"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not much going on here\n"
+     ]
+    }
+   ],
    "source": [
     "# %load boring.py\n",
     "print(\"Not much going on here\")\n"
@@ -1540,10 +1588,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T20:42:57.812638Z",
+     "start_time": "2017-09-04T20:42:57.634750Z"
+    },
+    "scrolled": false,
+    "solution2": "hidden"
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04e406376bdb43c28b2eaf23a210485a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tp_widget = interactive(trig_plot,\n",
+    "            frequency = (0.1,10.0),\n",
+    "            amplitude = (0.1,10.0),\n",
+    "            fx_name=['sin','cos','tan'])\n",
+    "display(tp_widget)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1561,10 +1646,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T20:44:57.406597Z",
+     "start_time": "2017-09-04T20:44:57.403877Z"
+    },
+    "collapsed": true,
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "tp_res = tp_widget.result\n",
+    "tp_args= tp_widget.args"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1735,10 +1839,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-09-04T14:08:02.207166Z",
+     "start_time": "2017-09-04T14:08:02.202937Z"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting install_ijulia.jl\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile install_ijulia.jl\n",
+    "ENV[\"JUPYTER\"]=\"/Users/nielsond/miniconda3/envs/nhw_ipynb/bin/jupyter\"\n",
+    "Pkg.add(\"IJulia\")\n",
+    "Pkg.build(\"IJulia\")"
+   ]
   },
   {
    "cell_type": "code",
